1.4.6 - More Damn Turrets!
-Additional Turrets Mod

1.4.5 - Updates
-updated to new bobs mods names
-added Dytech, Outposts

1.4.4 - Factorio .14
-Thats it, just updated to Factorio .14
-Download from GITHUB until portal distinguishes between versions.

1.4.3 - Natural Evolution!
-Added Biological Bullet from NE-Enemies
-minor code fixes

1.4.2 - Factorio Extended
-autofill text surface fix - MagmaMcFry
-Factorio Extended, Nucular added to default sets
-Remote interface for turning autofill on or off explicity
-Hotkey for turning group item division on or off (default Ctrl + Alt + F)


1.4.1 - Even More Tanks
-More safety checks for when mods are removed
-Oooops fixed and some temporary logic.
-Added Tankwerks, MoCombat, Supertank, KSpower, Military5, IncindiaryMunitions, Artillery.
-TODO re-check defaults when loading new mods.

1.4.0
-New Hotkey for turning fill limits on and off
-default support for Advanced Tanks, GImprovements
-personalsets are kept upon updating however they are not verified when other mods are added or removed. You will have to do /c remote.call("af","resetUser") if a mod change causes an item to be removed.  I was gonna fix this but I forgot.........

1.3.18
-Temporary work around to mod changes causing crash if the item no longer exists.
-Hotkey support, hover over an entity and CTRL-F to autofill
-Current known issues:
-Need better prioritization on ammo selection
-Hotkey Filling will fill trunk space if vehicle is full
-Bobs batteries load into tank 3 correctly, oops typo
-Added bobs metal mixer and chem mixer
-Angelrefining burner crusher
-if you have any personal sets they will get removed every upgrade/mod change until I can add in better logic checking for sets!

1.3.17
-Combat Units Mod added to defaultsets
-Bulldozer added to defaultsets - Created Generic setlist
-Cleanup and condense default settings list

1.3.16
-Add YI defaultsets
-Force Reset of sets

1.3.15
-shuttle train support