@@ -1,6 +1,6 @@
 {
   "name": "autofill",
-  "version": "1.4.5",
+  "version": "1.4.6",
   "factorio_version": "0.14",
   "title": "Autofill",
   "author": "rk84, Nexela",
